build-files/piranha/1.5.2/README.md
# piranha container

Main tool : [piranha](https://github.com/polio-nanopore/piranha)

<details>

<summary>Additional tools installed via micromamba:</summary>

```
  Name                       Version       Build                 Channel    
──────────────────────────────────────────────────────────────────────────────
  _libgcc_mutex              0.1           conda_forge           conda-forge
  _openmp_mutex              4.5           2_gnu                 conda-forge
  alsa-lib                   1.2.11        hd590300_1            conda-forge
  amply                      0.1.6         pyhd8ed1ab_1          conda-forge
  appdirs                    1.4.4         pyhd8ed1ab_1          conda-forge
  attrs                      25.3.0        pyh71513ae_0          conda-forge
  bcftools                   1.20          h8b25389_1            bioconda   
  brotli-python              1.1.0         py310hf71b8c6_2       conda-forge
  bzip2                      1.0.8         h4bc722e_7            conda-forge
  c-ares                     1.34.5        hb9d3cd8_0            conda-forge
  ca-certificates            2025.4.26     hbd8a1cb_0            conda-forge
  cairo                      1.18.0        h3faef2a_0            conda-forge
  certifi                    2025.4.26     pyhd8ed1ab_0          conda-forge
  cffi                       1.17.1        py310h8deb56e_0       conda-forge
  charset-normalizer         3.4.2         pyhd8ed1ab_0          conda-forge
  coin-or-cbc                2.10.12       h8b142ea_1            conda-forge
  coin-or-cgl                0.60.7        h516709c_0            conda-forge
  coin-or-clp                1.17.8        h1ee7a9c_0            conda-forge
  coin-or-osi                0.108.10      haf5fa05_0            conda-forge
  coin-or-utils              2.11.11       hee58242_0            conda-forge
  coincbc                    2.10.12       2_metapackage         conda-forge
  configargparse             1.7           pyhd8ed1ab_1          conda-forge
  connection_pool            0.0.3         pyhd3deb0d_0          conda-forge
  coreutils                  9.1           h166bdaf_0            conda-forge
  datrie                     0.8.2         py310ha75aee5_8       conda-forge
  docutils                   0.21.2        pyhd8ed1ab_1          conda-forge
  dpath                      2.2.0         pyha770c72_0          conda-forge
  eigen                      3.4.0         h00ab1b0_0            conda-forge
  expat                      2.7.0         h5888daf_0            conda-forge
  flopp                      0.2.0         h4ac6f70_0            bioconda   
  font-ttf-dejavu-sans-mono  2.37          hab24e00_0            conda-forge
  font-ttf-inconsolata       3.000         h77eed37_0            conda-forge
  font-ttf-source-code-pro   2.038         h77eed37_0            conda-forge
  font-ttf-ubuntu            0.83          h77eed37_3            conda-forge
  fontconfig                 2.14.2        h14ed4e7_0            conda-forge
  fonts-conda-ecosystem      1             0                     conda-forge
  fonts-conda-forge          1             0                     conda-forge
  freebayes                  1.3.6         hb0f3ef8_7            bioconda   
  freetype                   2.12.1        h267a509_2            conda-forge
  gawk                       5.3.1         hcd3d067_0            conda-forge
  giflib                     5.2.2         hd590300_0            conda-forge
  gitdb                      4.0.12        pyhd8ed1ab_0          conda-forge
  gitpython                  3.1.44        pyhff2d567_0          conda-forge
  gmp                        6.3.0         hac33072_2            conda-forge
  graphite2                  1.3.13        h59595ed_1003         conda-forge
  gsl                        2.7           he838d99_0            conda-forge
  h2                         4.2.0         pyhd8ed1ab_0          conda-forge
  harfbuzz                   8.5.0         hfac3d4d_0            conda-forge
  hpack                      4.1.0         pyhd8ed1ab_0          conda-forge
  htslib                     1.21          h5efdd21_0            bioconda   
  humanfriendly              10.0          pyh707e725_8          conda-forge
  hyperframe                 6.1.0         pyhd8ed1ab_0          conda-forge
  icu                        73.2          h59595ed_0            conda-forge
  idna                       3.10          pyhd8ed1ab_1          conda-forge
  importlib_resources        6.5.2         pyhd8ed1ab_0          conda-forge
  iqtree                     2.4.0         h503566f_0            bioconda   
  jclusterfunk               0.0.25        1                     cov-ert    
  jinja2                     3.1.6         pyhd8ed1ab_0          conda-forge
  jsoncpp                    1.9.6         hf42df4d_1            conda-forge
  jsonschema                 4.23.0        pyhd8ed1ab_1          conda-forge
  jsonschema-specifications  2025.4.1      pyh29332c3_0          conda-forge
  jupyter_core               5.7.2         pyh31011fe_1          conda-forge
  k8                         0.2.5         hdcf5f25_4            bioconda   
  keyutils                   1.6.1         h166bdaf_0            conda-forge
  krb5                       1.21.3        h659f571_0            conda-forge
  lcms2                      2.16          hb7c19ff_0            conda-forge
  ld_impl_linux-64           2.43          h712a8e2_4            conda-forge
  lerc                       4.0.0         h0aef613_1            conda-forge
  libasprintf                0.24.1        h8e693c7_0            conda-forge
  libblas                    3.9.0         31_h59b9bed_openblas  conda-forge
  libcblas                   3.9.0         31_he106b2a_openblas  conda-forge
  libcups                    2.3.3         h4637d8d_4            conda-forge
  libcurl                    8.8.0         hca28451_1            conda-forge
  libdeflate                 1.20          hd590300_0            conda-forge
  libedit                    3.1.20250104  pl5321h7949ede_0      conda-forge
  libev                      4.33          hd590300_2            conda-forge
  libexpat                   2.7.0         h5888daf_0            conda-forge
  libffi                     3.4.6         h2dba641_1            conda-forge
  libgcc                     15.1.0        h767d61c_2            conda-forge
  libgcc-ng                  15.1.0        h69a702a_2            conda-forge
  libgettextpo               0.24.1        h5888daf_0            conda-forge
  libgfortran                15.1.0        h69a702a_2            conda-forge
  libgfortran-ng             15.1.0        h69a702a_2            conda-forge
  libgfortran5               15.1.0        hcea5267_2            conda-forge
  libglib                    2.80.2        hf974151_0            conda-forge
  libgomp                    15.1.0        h767d61c_2            conda-forge
  libiconv                   1.18          h4ce23a2_1            conda-forge
  libidn2                    2.3.8         ha4ef2c3_0            conda-forge
  libjpeg-turbo              3.1.0         hb9d3cd8_0            conda-forge
  liblapack                  3.9.0         31_h7ac8fdf_openblas  conda-forge
  liblapacke                 3.9.0         31_he2f377e_openblas  conda-forge
  liblzma                    5.8.1         hb9d3cd8_1            conda-forge
  liblzma-devel              5.8.1         hb9d3cd8_1            conda-forge
  libnghttp2                 1.58.0        h47da74e_1            conda-forge
  libnsl                     2.0.1         hd590300_0            conda-forge
  libopenblas                0.3.29        pthreads_h94d23a6_0   conda-forge
  libpng                     1.6.43        h2797004_0            conda-forge
  libsqlite                  3.46.0        hde9e2c9_0            conda-forge
  libssh2                    1.11.0        h0841786_0            conda-forge
  libstdcxx                  15.1.0        h8f9b012_2            conda-forge
  libstdcxx-ng               15.1.0        h4852527_2            conda-forge
  libtiff                    4.6.0         h1dd3fc0_3            conda-forge
  libunistring               0.9.10        h7f98852_0            conda-forge
  libuuid                    2.38.1        h0b41bf4_0            conda-forge
  libwebp-base               1.5.0         h851e524_0            conda-forge
  libxcb                     1.15          h0b41bf4_0            conda-forge
  libxcrypt                  4.4.36        hd590300_1            conda-forge
  libzlib                    1.2.13        h4ab18f5_6            conda-forge
  mafft                      7.526         h4bc722e_0            conda-forge
  markupsafe                 3.0.2         py310h89163eb_1       conda-forge
  minimap2                   2.17          h5bf99c6_4            bioconda   
  mpfr                       4.2.1         h90cbb55_3            conda-forge
  nbformat                   5.10.4        pyhd8ed1ab_1          conda-forge
  ncurses                    6.5           h2d0b736_3            conda-forge
  openjdk                    22.0.1        hb622114_0            conda-forge
  openssl                    3.5.0         h7b32b05_1            conda-forge
  packaging                  25.0          pyh29332c3_1          conda-forge
  parallel                   20250422      ha770c72_0            conda-forge
  pcre2                      10.43         hcad00b1_0            conda-forge
  perl                       5.32.1        7_hd590300_perl5      conda-forge
  pip                        25.1.1        pyh8b19718_0          conda-forge
  piranha                    1.5.2         pypi_0                pypi       
  pixman                     0.46.0        h29eaf8c_0            conda-forge
  pkgutil-resolve-name       1.3.10        pyhd8ed1ab_2          conda-forge
  plac                       1.4.5         pyhd8ed1ab_0          conda-forge
  platformdirs               4.3.8         pyhe01879c_0          conda-forge
  psutil                     7.0.0         py310ha75aee5_0       conda-forge
  pthread-stubs              0.4           hb9d3cd8_1002         conda-forge
  pulp                       2.7.0         py310hff52083_1       conda-forge
  pyabpoa                    1.5.4         pypi_0                pypi       
  pycparser                  2.22          pyh29332c3_1          conda-forge
  pyparsing                  3.2.3         pyhd8ed1ab_1          conda-forge
  pysocks                    1.7.1         pyha55dd90_7          conda-forge
  python                     3.10.14       hd12c33a_0_cpython    conda-forge
  python-fastjsonschema      2.21.1        pyhd8ed1ab_0          conda-forge
  python_abi                 3.10          7_cp310               conda-forge
  pyyaml                     6.0.2         py310h89163eb_2       conda-forge
  rasusa                     0.7.1         h031d066_2            bioconda   
  readline                   8.2           h8c095d6_2            conda-forge
  referencing                0.36.2        pyh29332c3_0          conda-forge
  requests                   2.32.3        pyhd8ed1ab_1          conda-forge
  reretry                    0.11.8        pyhd8ed1ab_1          conda-forge
  rpds-py                    0.25.0        py310hbcd0ec0_0       conda-forge
  samtools                   1.20          h50ea8bc_1            bioconda   
  setuptools                 80.1.0        pyhff2d567_0          conda-forge
  smart_open                 7.1.0         pyhd8ed1ab_0          conda-forge
  smmap                      5.0.2         pyhd8ed1ab_0          conda-forge
  snakemake-minimal          7.32.4        pyhdfd78af_1          bioconda   
  stopit                     1.1.2         pyhd8ed1ab_1          conda-forge
  tabix                      1.11          hdfd78af_0            bioconda   
  tabixpp                    1.1.2         h27d5293_3            bioconda   
  tabulate                   0.9.0         pyhd8ed1ab_2          conda-forge
  throttler                  1.2.2         pyhd8ed1ab_0          conda-forge
  tk                         8.6.13        noxft_h4845f30_101    conda-forge
  toposort                   1.10          pyhd8ed1ab_1          conda-forge
  traitlets                  5.14.3        pyhd8ed1ab_1          conda-forge
  typing_extensions          4.13.2        pyh29332c3_0          conda-forge
  tzdata                     2025b         h78e105d_0            conda-forge
  urllib3                    2.4.0         pyhd8ed1ab_0          conda-forge
  vcflib                     1.0.10        hdcf5f25_1            bioconda   
  wfa2-lib                   2.3.5         h9948957_3            bioconda   
  wget                       1.21.4        hda4d442_0            conda-forge
  wheel                      0.45.1        pyhd8ed1ab_1          conda-forge
  wrapt                      1.17.2        py310ha75aee5_0       conda-forge
  xorg-fixesproto            5.0           hb9d3cd8_1003         conda-forge
  xorg-inputproto            2.3.2         hb9d3cd8_1003         conda-forge
  xorg-kbproto               1.0.7         hb9d3cd8_1003         conda-forge
  xorg-libice                1.1.2         hb9d3cd8_0            conda-forge
  xorg-libsm                 1.2.6         he73a12e_0            conda-forge
  xorg-libx11                1.8.9         h8ee46fc_0            conda-forge
  xorg-libxau                1.0.12        hb9d3cd8_0            conda-forge
  xorg-libxdmcp              1.1.5         hb9d3cd8_0            conda-forge
  xorg-libxext               1.3.4         h0b41bf4_2            conda-forge
  xorg-libxfixes             5.0.3         h7f98852_1004         conda-forge
  xorg-libxi                 1.7.10        h4bc722e_1            conda-forge
  xorg-libxrender            0.9.11        hd590300_0            conda-forge
  xorg-libxt                 1.3.0         hd590300_1            conda-forge
  xorg-libxtst               1.2.5         h4bc722e_0            conda-forge
  xorg-recordproto           1.14.2        hb9d3cd8_1003         conda-forge
  xorg-renderproto           0.11.1        hb9d3cd8_1003         conda-forge
  xorg-xextproto             7.3.0         hb9d3cd8_1004         conda-forge
  xorg-xproto                7.0.31        hb9d3cd8_1008         conda-forge
  xz                         5.8.1         hbcc6ac9_1            conda-forge
  xz-gpl-tools               5.8.1         hbcc6ac9_1            conda-forge
  xz-tools                   5.8.1         hb9d3cd8_1            conda-forge
  yaml                       0.2.5         h7f98852_2            conda-forge
  yte                        1.7.0         pyha770c72_1          conda-forge
  zipp                       3.21.0        pyhd8ed1ab_1          conda-forge
  zlib                       1.2.13        h4ab18f5_6            conda-forge
  zstandard                  0.23.0        py310ha75aee5_2       conda-forge
  zstd                       1.5.6         ha6fb4c9_0            conda-forge
```

</details>


Full documentation: [https://github.com/polio-nanopore/piranha](https://github.com/polio-nanopore/piranha)

> Poliovirus Investigation Resource Automating Nanopore Haplotype Analysis. <br><br> piranha is a tool in development as part of the Poliovirus Sequencing Consortium. It runs an automated analysis pipeline for sequencing VP1 regions of the poliovirus or non-polio enterovirus genome (whole genome analysis to be implemented soon) and produces an interactive report alongside the consensus data.

## Example Usage

```bash
# run Piranha on a directory of FASTQs (Guppy output)
piranha -i /piranha/test/pak_run/demultiplexed --verbose -b piranha/test/pak_run/barcodes01.csv -t 2 2>&1 | tee piranha.log
```
